--- a/templates/blocks/image.html
+++ b/templates/blocks/image.html
@@ -3,7 +3,9 @@
   {% set thumb = img.thumbnail(700) %}
   <div class="flow-block image-block{% for class in this.class.strip().split() %} image-block-{{ class }}{% endfor %}">
     <img 
-        src="{{ thumb|url }}" alt="{{ this.alt }}" 
+        itemprop="image"
+        src="{{ thumb|url }}"
+        alt="{{ this.alt }}" 
         width="{{ thumb.width }}"
         height="{{ thumb.height }}"
         />
