Add svg driver to signup form

--- a/templates/signup-form.html
+++ b/templates/signup-form.html
@@ -1,6 +1,6 @@
 <!-- Begin MailChimp Signup Form -->
 <form action="//crashtestgardens.us6.list-manage.com/subscribe/post?u=f709ca4bc33c308465ddee489&amp;id=b0ceec374f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-  <h2>From “A-ha!” to “Oh no!”</h2>
+  <h2><img src="/images/driver-helmet.svg?v=1" height=38 class="u-round" /> From “A-ha!” to “Oh no!”</h2>
   <p><strong>I'm sharing everything I learn on my way to garden mastery. I'm learning a lot, and so will you! Subscribe to my newsletter and never miss out.</strong></p>
 
   <div class="indicates-required u-pull-right u-cf"><span class="asterisk">*</span> required</div>
