--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -695,6 +695,10 @@ td:last-child {
   display: table;
   clear: both; }
 
+.u-round {
+  border-radius: 50%;
+}
+
 
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
