--- a/templates/blocks/pullquote.html
+++ b/templates/blocks/pullquote.html
@@ -1,5 +1,7 @@
 <aside class="flow-block pullquote-block{% for class in this.class.strip().split() %} pullquote-block-{{ class }}{% endfor %}">
-  <blockquote>
-    {{ this.text }}
-  </blockquote>
+  <div class="container">
+    <blockquote>
+      {{ this.text }}
+    </blockquote>
+  </div>
 </aside>
