--- a/templates/blocks/text.html
+++ b/templates/blocks/text.html
@@ -1,3 +1,5 @@
-<div class="flow-block text-block{% for class in this.class.strip().split() %} text-block-{{ class }}{% endfor %}">
-  {{ this.text }}
-</div>
+<section class="flow-block text-block{% for class in this.class.strip().split() %} text-block-{{ class }}{% endfor %}">
+  <div class="container">
+    {{ this.text }}
+  </div>
+</section>
