--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,8 +54,9 @@
   </main>
   <footer>
     <div class="flow-block text-block">
+      <div class="container">
       <p>Copyright &copy; 2016 by Worlds Enough Studios. All rights reserved.</p>
-      <p>Header image by <a href="https://unsplash.com/@cjoudrey">Christian Joudrey</a></p>
+      </div>
     </div>
   </footer>
   {% if this.enable_subscribe_form %}
