--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -1,60 +1,64 @@
 {% macro render_blog_post(post, from_index=false, add_divider=false) %}
   <article class="blog-post" itemscope="" itemtype="http://schema.org/BlogPosting">
     <div class="flow-block">
-      {% if not from_index %}
-        {% set siblings = post.get_siblings() %}
+      <div class="container">
+        {% if not from_index %}
+          {% set siblings = post.get_siblings() %}
 
-        {% if siblings.prev_page %}
-          <a href="{{ siblings.prev_page|url }}">previous</a>
-        {% endif %}
+          {% if siblings.prev_page %}
+            <a href="{{ siblings.prev_page|url }}">previous</a>
+          {% endif %}
 
-        {% if siblings.next_page %}
-          <a href="{{ siblings.next_page|url }}">next</a>
+          {% if siblings.next_page %}
+            <a href="{{ siblings.next_page|url }}">next</a>
+          {% endif %}
         {% endif %}
-      {% endif %}
-      <h2 itemprop="name headline">
-        {%- if from_index -%}
-        <a href="{{ post|url }}">{{ post.title }}</a>
-        {%- else -%}
-        {{ post.title }}
-        {%- endif -%}
-      </h2>
-      {% if post.summary %}
-      <div class="summary" itemprop="description">
-      {{ post.summary }}
+        <h2 itemprop="name headline">
+          {%- if from_index -%}
+          <a href="{{ post|url }}">{{ post.title }}</a>
+          {%- else -%}
+          {{ post.title }}
+          {%- endif -%}
+        </h2>
+        {% if post.summary %}
+        <div class="summary" itemprop="description">
+        {{ post.summary }}
+        </div>
+        {% endif %}
+        <p class="meta">
+          Written by
+          <span itemprop="author" itemscope="" itemtype="http://schema.org/Person">
+          <span itemprop="name">
+          {%- if post.twitter_handle -%}
+            <a href="https://twitter.com/{{ post.twitter_handle }}"
+               itemprop="url" rel="author">
+              {{ post.author or post.twitter_handle }}
+            </a>
+          {%- else -%}
+            {{ post.author }}
+          {%- endif -%}
+          </span></span>
+          on <time itemprop="datePublished">{{ post.pub_date }}</time>
+        </p>
       </div>
-      {% endif %}
-      <p class="meta">
-        Written by
-        <span itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-        <span itemprop="name">
-        {%- if post.twitter_handle -%}
-          <a href="https://twitter.com/{{ post.twitter_handle }}"
-             itemprop="url" rel="author">
-            {{ post.author or post.twitter_handle }}
-          </a>
-        {%- else -%}
-          {{ post.author }}
-        {%- endif -%}
-        </span></span>
-        on <time itemprop="datePublished">{{ post.pub_date }}</time>
-      </p>
     </div>
     {% if from_index %}
       <div class="flow-block" itemprop="description">
-      {% if post.summary %}
-      {{ post.summary }}
-      {% else %}
-      {% for blk in post.body.blocks %}
-        {% if loop.first %}
-          {% if blk._flowblock == 'image' %}
-          {{ blk }}
-          {% else %}
-          {{ blk.text|excerpt }}
+        <div class="container">
+        {% if post.summary %}
+        {{ post.summary }}
+        {% else %}
+        {% for blk in post.body.blocks %}
+          {% if loop.first %}
+            {% if blk._flowblock == 'image' %}
+            {{ blk }}
+            {% else %}
+            {{ blk.text|excerpt }}
+            {% endif %}
           {% endif %}
+        {% endfor %}
         {% endif %}
-      {% endfor %}
-      {% endif %}
+        </div>
       </div>
     {% else %}
       <div class="blog-post-content" itemprop="articleBody">
@@ -62,20 +66,26 @@
       </div>
       {% if post.enable_subscribe_form and post.enable_comments %}
       <div class="flow-block">
-        <p><a href="#comments">Comments</a></p>
+        <div class="container">
+          <p><a href="#comments">Comments</a></p>
+        </div>
       </div>
       {% endif %}
     {% endif %}
   {% if not from_index %}
     {% if post.enable_subscribe_form %}
-    <hr />
-    <div id="mc_embed_signup" class="flow-block signup-form">
-      {% include 'signup-form.html' %}
+    <div id="mc_embed_signup" class="flow-block signup-form bg-de-york">
+      <div class="container">
+        {% include 'signup-form.html' %}
+      </div>
     </div>
     {% endif %}
     {% if post.enable_comments %}
-      <hr />
-      <div id="comments" class="flow-block comments">{{ render_disqus_comments() }}</div>
+      <div id="comments" class="flow-block comments">
+        <div class="container">
+          {{ render_disqus_comments() }}
+        </div>
+      </div>
     {% endif %}
   {% endif %}
   {% if add_divider %}
