--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,9 +1,3 @@
-/* 
-Color palette: 
-http://paletton.com/#uid=7000u0kllllaFw0g0qFqFg0w0aF
-*/
-
-
 @import 'https://fonts.googleapis.com/css?family=Copse|Lora';
 
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
@@ -465,7 +459,7 @@ body {
   font-weight: 400;
   font-family: 'Lora', Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
   line-height: 1.6;
-  color: #333;
+  color: #552700;
   background-color: #372C27;
 }
 
@@ -473,7 +467,7 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6, b, strong, label {
   font-family: 'Copse', Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #552700;
+  margin: 0;
 }
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
@@ -481,13 +475,11 @@ h1, h2, h3, h4, h5, h6 {
 
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-  text-decoration: none;
-  color: #552700;
+  text-decoration: underline;
 }
 
 blockquote {
    border-left: 2px solid #407F7F;
-   color: #407F7F;
    font-size: 1.2em;
 }
 
@@ -667,64 +659,6 @@ td:last-child {
 }
 
 
-/* Spacing
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-
-/* Utilities
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* Make element full width */
-.u-full-width {
-  width: 100%;
-  box-sizing: border-box; }
-
-/* Make sure elements don't run outside containers (great for images in columns) */
-.u-max-full-width {
-  max-width: 100%;
-  box-sizing: border-box; }
-
-/* Float either direction */
-.u-pull-right {
-  float: right; }
-.u-pull-left {
-  float: left; }
-
-/* Clear a float */
-.u-cf {
-  content: "";
-  display: table;
-  clear: both; }
-
-.u-round {
-  border-radius: 50%;
-}
-
-
-/* Misc
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-hr {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-  border-width: 0;
-  border-top: 1px solid #2D882D;
-}
-
-.asterisk {
-  color: red;
-}
-
-/* Clearing
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-/* Self Clearing Goodness */
-.container:after,
-.row:after,
-.u-cf {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 
 /* Flow Blocks
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -771,7 +705,6 @@ hr {
 }
 
 main {
-  padding: 1em;
   background-color: white;
 }
 
@@ -848,15 +781,18 @@ footer {
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.container, .flow-block {
+.flow-block {
   position: relative;
-  margin: 0;
   box-sizing: border-box;
+}
+.container {
+  margin: 0; 
+  padding: 1em 1em; 
 }
 
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {
-  .container, .flow-block {
+  .container {
     max-width: 30em;
     margin: 0 auto;
   }
@@ -866,7 +802,6 @@ footer {
   }
 
 }
-
 
 /* Pop-ups
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -939,3 +874,173 @@ there.
 @media (min-width: 1200px) {}
 
 
+/* Spacing
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+/* Utilities
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* Make element full width */
+.u-full-width {
+  width: 100%;
+  box-sizing: border-box; }
+
+/* Make sure elements don't run outside containers (great for images in columns) */
+.u-max-full-width {
+  max-width: 100%;
+  box-sizing: border-box; }
+
+/* Float either direction */
+.u-pull-right {
+  float: right; }
+.u-pull-left {
+  float: left; }
+
+/* Clear a float */
+.u-cf {
+  content: "";
+  display: table;
+  clear: both; }
+
+.u-round {
+  border-radius: 50%;
+}
+
+
+/* Misc
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+hr {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  border-width: 0;
+  border-top: 1px solid #2D882D;
+}
+
+.asterisk {
+  color: red;
+}
+
+/* Clearing
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Self Clearing Goodness */
+.container:after,
+.row:after,
+.u-cf {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+/* Colors
+––––––––––––––––––––––––––––––––––––––––––––––––––
+
+Color palette: 
+http://paletton.com/#uid=7000u0kllllaFw0g0qFqFg0w0aF
+*/
+
+
+/* Reds */
+.bg-cornflower-lilac, .bg-red-1 {
+  background-color: #FFAAAA;
+  color: black;
+}
+
+.bg-chestnut-rose, .bg-red-2 {
+  background-color: #D46A6A;
+  color: black;
+}
+
+.bg-medium-carmine, .bg-red-3 {
+  background-color: #AA3939;
+  color: #FFD1AA;
+}
+
+.bg-falu-red, .bg-red-4 {
+  background-color: #801515;
+  color: #FFD1AA;
+}
+
+.bg-rosewood, .bg-red-5 {
+  background-color: #550000;
+  color: #FFD1AA;
+}
+
+/* Blues */ 
+.bg-patina, .bg-blue-1 {
+  background-color: #669999;
+  color: black;
+}
+
+.bg-faded-jade, .bg-blue-2 {
+  background-color: #407F7F;
+  color: black;
+}
+
+.bg-blue-dianne, .bg-blue-3 {
+  background-color: #226666;
+  color: #FFD1AA;
+}
+
+.bg-eden, .bg-blue-4 {
+  background-color: #0D4D4D;
+  color: #FFD1AA;
+}
+
+.bg-deep-teal, .bg-blue-5 {
+  background-color: #003333;
+  color: #FFD1AA;
+}
+
+/* Greens */
+.bg-de-york, .bg-green-1 {
+  background-color: #88CC88;
+  color: #333;
+}
+
+.bg-fruit-salad, .bg-green-2 {
+  background-color: #55AA55;
+  color: black;
+}
+
+.bg-forest-green, .bg-green-3 {
+  background-color: #2D882D;
+  color: black;
+}
+
+.bg-green-house, .bg-green-4 {
+  background-color: #116611;
+  color: #FFD1AA;
+}
+
+.bg-crusoe, .bg-green-5 {
+  background-color: #004400;
+  color: #FFD1AA;
+}
+
+/* Browns */
+.bg-flesh, .bg-brown-1 {
+  background-color: #FFD1AA;
+  color: #333;
+}
+
+.bg-whiskey, .bg-brown-2 {
+  background-color: #D49A6A;
+  color: black;
+}
+
+.bg-brown-rust, .bg-brown-3 {
+  background-color: #AA6C39;
+  color: black;
+}
+
+.bg-copper-canyon, .bg-brown-4 {
+  background-color: #804515;
+  color: #FFD1AA;
+}
+
+.bg-carnaby-tan, .bg-brown-5 {
+  background-color: #552600;
+  color: #FFD1AA;
+}
