--- a/templates/page.html
+++ b/templates/page.html
@@ -3,24 +3,33 @@
 {% block body %}
   <article class="page" itemscope="" itemtype="http://schema.org/Article">
   <div class="flow-block">
-    <h2 itemprop="name headline">{{ this.title }}</h2>
+    <div class="container">
+      <h2 itemprop="name headline">{{ this.title }}</h2>
+    </div>
   </div>
   <div class="page-content" itemprop="articleBody">
     {{ this.body }}
   </div>
   {% if this.enable_subscribe_form and this.enable_comments %}
   <div class="flow-block">
-    <p><a href="#comments">Comments</a></p>
+    <div class="container">
+      <p><a href="#comments">Comments</a></p>
+    </div>
   </div>
   {% endif %}
   {% if this.enable_subscribe_form %}
-  <hr />
-  <div id="mc_embed_signup" class="flow-block signup-form">
+  <div id="mc_embed_signup" class="flow-block signup-form bg-de-york">
+    <div class="container">
     {% include 'signup-form.html' %}
+    </div>
   </div>
   {% endif %}
   {% if this.enable_comments %}
   <hr />
-  <div id="comments" class="flow-block comments">{{ render_disqus_comments() }}</div>
+  <div id="comments" class="flow-block comments">
+    <div class="container">
+    {{ render_disqus_comments() }}
+    </div>
+  </div>
   {% endif %}
 {% endblock %}
