--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,10 +27,9 @@
 </head>
 <body>
   <header>
-    <h1><a href="/">Crash Test Gardens</a><br />
-    <small>I kill plants so you don't have to.</small>
-
-    </h1>
+    <img src="{{ '/images/crash-test-gardens-wordmark-color-solid-small.png'|asseturl }}"
+         alt="Crash Test Gardens: I kill plants so you don't have to."
+         class="u-round u-border" />
     <nav>
       <ul class="nav navbar-nav">
         <li><a{% if this._path == '/' %} class="active"{% endif
