--- a/templates/blocks/text.html
+++ b/templates/blocks/text.html
@@ -1,4 +1,4 @@
-<section class="flow-block text-block{% for class in this.class.strip().split() %} text-block-{{ class }}{% endfor %}">
+<section class="flow-block text-block{% for class in this.class.strip().split() %} {{ class }}{% endfor %}">
   <div class="container">
     {{ this.text }}
   </div>
