--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -22,7 +22,7 @@
         </h2>
         {% if post.summary %}
         <div class="summary" itemprop="description">
-        {{ post.summary }}
+        {{ post.summary | typogrify }}
         </div>
         {% endif %}
         <p class="meta">
