--- a/templates/page.html
+++ b/templates/page.html
@@ -7,7 +7,6 @@
       <h2 itemprop="name headline">{{ this.title }}</h2>
     </div>
   </div>
-  {{ this.body }}
   {% if this.enable_subscribe_form and this.enable_comments %}
   <div class="flow-block">
     <div class="container">
@@ -15,6 +14,7 @@
     </div>
   </div>
   {% endif %}
+  {{ this.body | typogrify }}
   {% if this.enable_comments %}
   <div id="comments" class="flow-block comments">
     <div class="container">
