--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
   <link rel="alternate" type="application/atom+xml"
                         title="The Crash Test Gardener"
                         href="{{ 'blog@atom/blog'|url }}" />
+  <meta name="description" content="{% block meta_desc %}{% endblock %}">
   
   <!-- http://realfavicongenerator.net/ -->
   <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png'|asseturl }}">
@@ -48,7 +49,6 @@
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
-
     {% block body %}{% endblock %}
   </main>
   <footer>
