--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -1,6 +1,11 @@
 {% macro render_blog_post(post, from_index=false, add_divider=false) %}
+  {%- if from_index -%}
+  {%- set htag = 'h2' -%}
+  {%- else -%}
+  {%- set htag = 'h1' -%}
+  {%- endif -%}
   <article class="blog-post" itemscope="" itemtype="http://schema.org/BlogPosting">
-    <div class="flow-block">
+    <div class="flow-block heading-block">
       <div class="container">
         {% if not from_index %}
           {% set siblings = post.get_siblings() %}
@@ -13,13 +18,13 @@
             <a href="{{ siblings.next_page|url }}">next</a>
           {% endif %}
         {% endif %}
-        <h2 itemprop="name headline">
+        <{{ htag }} itemprop="name headline">
           {%- if from_index -%}
           <a href="{{ post|url }}">{{ post.title }}</a>
           {%- else -%}
           {{ post.title }}
           {%- endif -%}
-        </h2>
+        </{{ htag }}>
         {% if post.summary %}
         <div class="summary" itemprop="description">
         {{ post.summary | typogrify }}
@@ -43,17 +48,17 @@
       </div>
     </div>
     {% if from_index %}
-      <div class="flow-block" itemprop="description">
+      <div class="flow-block text-block" itemprop="description">
         <div class="container">
         {% if post.summary %}
-        {{ post.summary }}
+        {{ post.summary | typogrify }}
         {% else %}
         {% for blk in post.body.blocks %}
           {% if loop.first %}
             {% if blk._flowblock == 'image' %}
             {{ blk }}
             {% else %}
-            {{ blk.text|excerpt }}
+            {{ blk.text | excerpt | typogrify }}
             {% endif %}
           {% endif %}
         {% endfor %}
@@ -61,14 +66,7 @@
         </div>
       </div>
     {% else %}
-      {{ post.body }}
-      {% if post.enable_subscribe_form and post.enable_comments %}
-      <div class="flow-block">
-        <div class="container">
-          <p><a href="#comments">Comments</a></p>
-        </div>
-      </div>
-      {% endif %}
+      {{ post.body | typogrify }}
     {% endif %}
   {% if not from_index %}
     {% if post.enable_comments %}
