Simplify layout for now, add email form customization

--- a/templates/blocks/email-form.html
+++ b/templates/blocks/email-form.html
@@ -13,6 +13,8 @@
       <label for="mce-NAME">Name </label>
       <input type="text" value="" name="NAME" class="u-full-width" id="mce-NAME" placeholder="How may I address you?">
 
+      {{ this.extra_html }}
+
       <div id="mce-responses" class="u-cf">
         <div class="response" id="mce-error-response" style="display:none"></div>
         <div class="response" id="mce-success-response" style="display:none"></div>
