Put the name first!

--- a/templates/blocks/email-form.html
+++ b/templates/blocks/email-form.html
@@ -6,12 +6,12 @@
 
       {{ this.text }}
 
-      <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+      <label for="mce-NAME">Name <span class="asterisk">*</span></label>
+      <input type="text" value="" name="NAME" class="required u-full-width" id="mce-NAME" placeholder="How may I address you?">
+
+      <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
     </label>
       <input type="email" value="" name="EMAIL" class="required email u-full-width" id="mce-EMAIL" placeholder="Enter your email address">
-
-      <label for="mce-NAME">Name </label>
-      <input type="text" value="" name="NAME" class="u-full-width" id="mce-NAME" placeholder="How may I address you?">
 
       {{ this.extra_html }}
 
