Customize button text

--- a/templates/blocks/email-form.html
+++ b/templates/blocks/email-form.html
@@ -23,7 +23,7 @@
       <div style="position: absolute; left: -5000px;" aria-hidden="true">
         <input type="text" name="b_f709ca4bc33c308465ddee489_b0ceec374f" tabindex="-1" value="" placeholder="Ignore me!">
       </div>
-      <input type="submit" value="Send Me Hard-Knock Lessons on Gardening!" name="subscribe" id="mc-embedded-subscribe" class="button-primary u-full-width">
+      <input type="submit" value="{{ this.button_text }}" name="subscribe" id="mc-embedded-subscribe" class="button-primary u-full-width">
     </form>
     <!--End mc_embed_signup-->
   </div>
