--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,7 +56,7 @@
   <footer>
     <div class="flow-block text-block">
       <div class="container">
-      <p>Copyright &copy; 2016 by Worlds Enough Studios. All rights reserved.</p>
+      <p>Copyright &copy; 2016—2017 by Worlds Enough Studios. All rights reserved.</p>
       </div>
     </div>
   </footer>
@@ -70,7 +70,6 @@
   </div>
   {% endif %}
 
-  {% block pre_foot_tags %}{% endblock %}
   {% include 'foot-tags.html' %}
   {% block post_foot_tags %}{% endblock %}
 </body>
